Clear Index.html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,45 @@
         <!-- <img src="images/IMG_20221006_111836.jpg?" alt="#"> -->
         <br><br><br>
     </div>
-    <div class="container-fluid vh-100"></div>
+    <div class="container-fluid" id="bottom">
+        <div class="row">
+            <h1>DAADS</h1>
+            <h2>DAADS stands for The Adil Design And Solutions.</h2>
+        </div>
+        <hr style="height: 5px; background-color: #000; opacity: 1;">
+        <div class="row">
+            <div class="col-4">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="col-4">
+                <ul>
+                    <li>Projects</li>
+                    <li>Architecture Projects</li>
+                    <li>Software Design Projects</li>
+                </ul>
+            </div>
+            <div class="col-4">
+                <ul>
+                    <li>Bulildings Design Projects</li>
+                    <li>Clients of Our Company</li>
+                    <li>Privacy Terms and Conditions</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid" id="footer">
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-2"><img src="images/logo.png" alt="" width="50px" height="50px" ></div>
+            <div class="col-9 text-center">
+                <p>&copy;All Rights Reserved. Design and coded by DAADS.</p>
+            </div>
+        </div>
+    </div>
     <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
