Full craeted for PC

--- a/About us.html
+++ b/About us.html
@@ -36,10 +36,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link " aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="About us.html">About Us</a>
+                <a class="nav-link active" href="About us.html">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
@@ -50,50 +50,44 @@
         </div>
       </nav>
     </div>
-    <div class="container-fluid">
-      <div class="row p-4" id="details">
-        <div class="col-6">
-            <h2>DAADS</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis similique quisquam, eligendi, modi, voluptatum quae deleniti aperiam et iure repudiandae consectetur earum dolorum doloremque animi eos maxime. Deleniti, impedit eum.</p>
-            <br>
-            <div class="row">
-                <div class="col-6">
-                    <h2>Another</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore minima odit laborum dolores quibusdam excepturi veritatis deleniti optio. Itaque animi culpa temporibus quidem. Iusto expedita nulla eligendi, illum repellendus atque.</p>
+    <div class="container-fluid" id="about-us">
+        <div class="text text-center my-5">
+            <h1>Our Team</h1>
+            <h3>Our team is one of the best and powerful team in the word</h3>
+            <h3>There are many designer in our team. </h3>
+            <h3>More ever we have some video editor, web developer and web engeneer.</h3>
+            <h3>All of these are expert and can do everything that we need.</h3>
+        </div>
+        <div class="images container my-5">
+            <div class="row justify-content-between">
+                <div class="card p-0" style="width: 18rem;">
+                    <img src="./Images/Designer.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Name: Mudassir Ameen</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn bg-default">Contact To him</a>
+                    </div>
                 </div>
-                <div class="col-6">
-                    <h1>Another</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem nulla odit harum exercitationem optio similique itaque ratione velit. Adipisci accusantium obcaecati ducimus dolor. Nobis accusamus itaque fugit quam, ab a.</p>
+                <div class="card p-0" style="width: 18rem;">
+                    <img src="./Images/Ideas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Name: Mudassir Ameen</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn bg-default">Contact To him</a>
+                    </div>
                 </div>
-            </div> 
+                <div class="card p-0" style="width: 18rem;">
+                    <img src="./Images/programmer.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Name: Mudassir Ameen</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn bg-default">Contact To him</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-6">
-            <img src="images/Software.jpg" alt="" class="img-fluid">
-        </div>
-      </div>
     </div>
-    <br>
-    <div class="container-fluid ">
-      <div class="row p-4">
-        <h2>Our Services </h2>
-        <div class="services">
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>We providing jobs to web developer</p> </i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>We also provide Design to make bulildings.</p></i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>we make interior design which will make your home or office beautiful and beautiful</p></i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>We provide a lot of Opportunities to our Clients to become a part of Online work.</p></i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>Contact us on this Email to become a part of our company.</p></i><br>
-        <div  class="email">
-        <p style="font-size:x-large; font-weight: bolder;">Email: <a href="mailto:mudassirameen104@gamil.com" class="text-reset" style=" text-decoration: none;" >mudassirameen104@gamil.com</a><br>
-            Whatsapp: +92 3064121754 
-        </p>
-    </div>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid" id="room">
-        <!-- <img src="images/IMG_20221006_111836.jpg?" alt="#"> -->
-        <br><br><br>
-    </div>
+
     <div class="container-fluid" id="bottom">
         <div class="row">
             <h1>DAADS</h1>
@@ -143,6 +137,5 @@
     integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
     crossorigin="anonymous"
   ></script>
-  </body>
-  
+  </body>  
 </html>
