--- a/contact.html
+++ b/contact.html
@@ -36,13 +36,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="About us.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link active" href="contact.html">Contact Us</a>
               </li>
             </ul>
             </form>
@@ -50,50 +50,58 @@
         </div>
       </nav>
     </div>
-    <div class="container-fluid">
-      <div class="row p-4" id="details">
-        <div class="col-6">
-            <h2>DAADS</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis similique quisquam, eligendi, modi, voluptatum quae deleniti aperiam et iure repudiandae consectetur earum dolorum doloremque animi eos maxime. Deleniti, impedit eum.</p>
-            <br>
+    <div class="container-fluid" id="contact-pic">
+      <div></div>
+      <div class="contact-text text-center">
+        <h1>Contact Us</h1>
+        <h4>Contact us to get help of any problem.</h4>
+      </div>
+    </div>
+    <div class="container-fluid" id="contact-form">
+        <form action="" class="form">
             <div class="row">
-                <div class="col-6">
-                    <h2>Another</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore minima odit laborum dolores quibusdam excepturi veritatis deleniti optio. Itaque animi culpa temporibus quidem. Iusto expedita nulla eligendi, illum repellendus atque.</p>
+                <div class="col-6 input">
+                    <label for="first-name">First Name:</label><br>
+                    <input type="text" id="first-name">
                 </div>
-                <div class="col-6">
-                    <h1>Another</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem nulla odit harum exercitationem optio similique itaque ratione velit. Adipisci accusantium obcaecati ducimus dolor. Nobis accusamus itaque fugit quam, ab a.</p>
+                <div class="col-6 input">
+                    <label for="last-name">Last Name:</label><br>
+                    <input type="text" id="last-name">
                 </div>
-            </div> 
-        </div>
-        <div class="col-6">
-            <img src="images/Software.jpg" alt="" class="img-fluid">
-        </div>
-      </div>
+            </div>
+            <div class="row">
+                <div class="col-6 input">
+                    <label for="email">Email:</label><br>
+                    <input type="Email" id="email">
+                </div>
+                <div class="col-6 input">
+                    <label for="phone-No">Phone Number:</label><br>
+                    <input type="text" pattern="[0-9]{11}" id="phone-No">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col input">
+                    <label for="select-question">What is Your Question?</label>
+                    <select class="form-select">
+                        <option selected>What is your Question?</option>
+                        <option value="1">Question 1</option>
+                        <option value="2">Question 2</option>
+                        <option value="3">Question 3</option>
+                      </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col input">
+                    <label for="message">Details:</label><br>
+                    <textarea name="" id="message" rows="10"></textarea>
+                </div>
+            </div>
+                <div class="input">
+                    <input type="button" value="Submit">
+                </div>
+        </form>
     </div>
-    <br>
-    <div class="container-fluid ">
-      <div class="row p-4">
-        <h2>Our Services </h2>
-        <div class="services">
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>We providing jobs to web developer</p> </i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>We also provide Design to make bulildings.</p></i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>we make interior design which will make your home or office beautiful and beautiful</p></i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>We provide a lot of Opportunities to our Clients to become a part of Online work.</p></i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>Contact us on this Email to become a part of our company.</p></i><br>
-        <div  class="email">
-        <p style="font-size:x-large; font-weight: bolder;">Email: <a href="mailto:mudassirameen104@gamil.com" class="text-reset" style=" text-decoration: none;" >mudassirameen104@gamil.com</a><br>
-            Whatsapp: +92 3064121754 
-        </p>
-    </div>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid" id="room">
-        <!-- <img src="images/IMG_20221006_111836.jpg?" alt="#"> -->
-        <br><br><br>
-    </div>
+
     <div class="container-fluid" id="bottom">
         <div class="row">
             <h1>DAADS</h1>
