home is now responsive

--- a/index.html
+++ b/index.html
@@ -52,38 +52,39 @@
     </div>
     <div class="container-fluid">
       <div class="row p-4" id="details">
-        <div class="col-6">
+        <div class="col-xl-6 order-xl-last">
+          <img src="images/Software.jpg" alt="" class="img-fluid">
+      </div>
+        <div class="col-xl-6">
             <h2>DAADS</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis similique quisquam, eligendi, modi, voluptatum quae deleniti aperiam et iure repudiandae consectetur earum dolorum doloremque animi eos maxime. Deleniti, impedit eum.</p>
             <br>
             <div class="row">
-                <div class="col-6">
+                <div class="col-xl-6">
                     <h2>Another</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore minima odit laborum dolores quibusdam excepturi veritatis deleniti optio. Itaque animi culpa temporibus quidem. Iusto expedita nulla eligendi, illum repellendus atque.</p>
                 </div>
-                <div class="col-6">
+                <div class="col-xl-6">
                     <h1>Another</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem nulla odit harum exercitationem optio similique itaque ratione velit. Adipisci accusantium obcaecati ducimus dolor. Nobis accusamus itaque fugit quam, ab a.</p>
                 </div>
             </div> 
         </div>
-        <div class="col-6">
-            <img src="images/Software.jpg" alt="" class="img-fluid">
-        </div>
+        
       </div>
     </div>
     <br>
-    <div class="container-fluid ">
-      <div class="row p-4">
+    <div class="container-fluid" id="our-services">
+      <div class="row">
         <h2>Our Services </h2>
-        <div class="services">
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>We providing jobs to web developer</p> </i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>We also provide Design to make bulildings.</p></i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>we make interior design which will make your home or office beautiful and beautiful</p></i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>We provide a lot of Opportunities to our Clients to become a part of Online work.</p></i><br>
-        <i style="font-size:x-large; font-weight: bolder;">&#x27BE; <p>Contact us on this Email to become a part of our company.</p></i><br>
+        <div class="services" id="services">
+        <i>&#x27BE; <p>We providing jobs to web developer</p> </i><br>
+        <i>&#x27BE; <p>We also provide Design to make bulildings.</p></i><br>
+        <i>&#x27BE; <p>we make interior design which will make your home or office beautiful and beautiful</p></i><br>
+        <i>&#x27BE; <p>We provide a lot of Opportunities to our Clients to become a part of Online work.</p></i><br>
+        <i>&#x27BE; <p>Contact us on this Email to become a part of our company.</p></i><br>
         <div  class="email">
-        <p style="font-size:x-large; font-weight: bolder;">Email: <a href="mailto:mudassirameen104@gamil.com" class="text-reset" style=" text-decoration: none;" >mudassirameen104@gamil.com</a><br>
+        <p>Email: <a href="mailto:mudassirameen104@gamil.com" class="text-reset" style=" text-decoration: none;" >mudassirameen104@gamil.com</a><br>
             Whatsapp: +92 3064121754 
         </p>
     </div>
@@ -100,8 +101,8 @@
             <h2>DAADS stands for The Adil Design And Solutions.</h2>
         </div>
         <hr style="height: 5px; background-color: #000; opacity: 1;">
-        <div class="row">
-            <div class="col-4">
+        <div class="row" id="bottom-navbar">
+            <div class="col-3">
                 <ul>
                     <li>Home</li>
                     <li>About</li>
@@ -115,7 +116,7 @@
                     <li>Software Design Projects</li>
                 </ul>
             </div>
-            <div class="col-4">
+            <div class="col-5">
                 <ul>
                     <li>Bulildings Design Projects</li>
                     <li>Clients of Our Company</li>
