Full Reponsive Website

--- a/About us.html
+++ b/About us.html
@@ -59,7 +59,7 @@
             <h3>All of these are expert and can do everything that we need.</h3>
         </div>
         <div class="images container my-5">
-            <div class="row justify-content-between">
+            <div class="row" id="about-us-row">
                 <div class="card p-0" style="width: 18rem;">
                     <img src="./Images/Designer.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -88,28 +88,30 @@
         </div>
     </div>
 
+    
+    
     <div class="container-fluid" id="bottom">
         <div class="row">
             <h1>DAADS</h1>
             <h2>DAADS stands for The Adil Design And Solutions.</h2>
         </div>
         <hr style="height: 5px; background-color: #000; opacity: 1;">
-        <div class="row">
-            <div class="col-4">
+        <div class="row" id="bottom-navbar">
+            <div class="col-sm-3">
                 <ul>
                     <li>Home</li>
                     <li>About</li>
                     <li>Contact</li>
                 </ul>
             </div>
-            <div class="col-4">
+            <div class="col-sm-4">
                 <ul>
                     <li>Projects</li>
                     <li>Architecture Projects</li>
                     <li>Software Design Projects</li>
                 </ul>
             </div>
-            <div class="col-4">
+            <div class="col-sm-5">
                 <ul>
                     <li>Bulildings Design Projects</li>
                     <li>Clients of Our Company</li>
