--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
       </nav>
     </div>
     <div class="container-fluid">
-      <div class="row p-4" id="details">
+      <div class="row" id="details">
         <div class="col-xl-6 order-xl-last">
           <img src="images/Software.jpg" alt="" class="img-fluid">
-      </div>
+        </div>
         <div class="col-xl-6">
             <h2>DAADS</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis similique quisquam, eligendi, modi, voluptatum quae deleniti aperiam et iure repudiandae consectetur earum dolorum doloremque animi eos maxime. Deleniti, impedit eum.</p>
@@ -102,21 +102,21 @@
         </div>
         <hr style="height: 5px; background-color: #000; opacity: 1;">
         <div class="row" id="bottom-navbar">
-            <div class="col-3">
+            <div class="col-sm-3">
                 <ul>
                     <li>Home</li>
                     <li>About</li>
                     <li>Contact</li>
                 </ul>
             </div>
-            <div class="col-4">
+            <div class="col-sm-4">
                 <ul>
                     <li>Projects</li>
                     <li>Architecture Projects</li>
                     <li>Software Design Projects</li>
                 </ul>
             </div>
-            <div class="col-5">
+            <div class="col-sm-5">
                 <ul>
                     <li>Bulildings Design Projects</li>
                     <li>Clients of Our Company</li>
