--- a/contact.html
+++ b/contact.html
@@ -60,21 +60,21 @@
     <div class="container-fluid" id="contact-form">
         <form action="" class="form">
             <div class="row">
-                <div class="col-6 input">
+                <div class="col-md-6 input">
                     <label for="first-name">First Name:</label><br>
                     <input type="text" id="first-name">
                 </div>
-                <div class="col-6 input">
+                <div class="col-md-6 input">
                     <label for="last-name">Last Name:</label><br>
                     <input type="text" id="last-name">
                 </div>
             </div>
             <div class="row">
-                <div class="col-6 input">
+                <div class="col-md-6 input">
                     <label for="email">Email:</label><br>
                     <input type="Email" id="email">
                 </div>
-                <div class="col-6 input">
+                <div class="col-md-6 input">
                     <label for="phone-No">Phone Number:</label><br>
                     <input type="text" pattern="[0-9]{11}" id="phone-No">
                 </div>
@@ -108,22 +108,22 @@
             <h2>DAADS stands for The Adil Design And Solutions.</h2>
         </div>
         <hr style="height: 5px; background-color: #000; opacity: 1;">
-        <div class="row">
-            <div class="col-4">
+        <div class="row" id="bottom-navbar">
+            <div class="col-sm-3">
                 <ul>
                     <li>Home</li>
                     <li>About</li>
                     <li>Contact</li>
                 </ul>
             </div>
-            <div class="col-4">
+            <div class="col-sm-4">
                 <ul>
                     <li>Projects</li>
                     <li>Architecture Projects</li>
                     <li>Software Design Projects</li>
                 </ul>
             </div>
-            <div class="col-4">
+            <div class="col-sm-5">
                 <ul>
                     <li>Bulildings Design Projects</li>
                     <li>Clients of Our Company</li>
